syntax = "proto3";
package smart_city;

enum DeviceType {
  UNKNOWN = 0;
  LAMP = 1;
  TEMP_SENSOR = 2;
}

message DeviceInfo {
  string id = 1;
  DeviceType type = 2;
  string status = 3;
}

message DiscoveryPacket {
  DeviceInfo info = 1;
  string ip_address = 2;
  int32 port = 3;
}

message GatewayRequest {
  string action = 1;
}

message SensorData {
  string device_id = 1;
  float value = 2;
}

message Command {
  string device_id = 1;
  string action = 2;
}

message ClientGatewayRequest {
  oneof request {
    string list_devices = 1;
    Command command_device = 2;
  }
}